sumo/tests/duarouter/errors/false_output/errors.duarouter.exe
Error: The output file 'output/routes.rou.xml' can not be build.
Quitting (on error).
